# transformer-from-scratch

./: .gitignore  MultiHeadAttentionClass.py  README.md  pyproject.toml  scaled_attention.py
labs-viz/: architecture_validator pre_post_norm.py  architecture_validator_rope_vs_abs.py  compare_runs.py  prepare_tinystories.py  rmsnorm_geometric.py  simple_inference.py  toy_training.py  training.py  training_distributed.py  training_moe_log.md  training_sparse_moe.py
labs-viz/ablation-attention-vs-deltanet/: README.md  plot_curves.py  run_ablation.sh
reports/: original-plan-month-2.md  pytorch-cheatsheet.md  week-6-8.-moe.md  week1.md  week2.md  week3.md  week4.md  week5-gqa-broadcasting-pain copy.md  week5-gqa-broadcasting-pain.md  week5-gqa-integrating-kvcache.md  week9-fromMHAtoDeltaGateNetworks.md
src/transformer_from_scratch/: activations.py  architecture_validator.py  config.py  convert_from_checkpoint.py  data_generators.py  data_pipeline.py  data_utils.py  decoder.py  delta_gate_decoder.py  delta_gate_layer.py  grad_lab.py  hybridtransformer.py  inference.py  loaders.py  moe.py  multi_head_attention.py  multi_head_attention_rope.py  positional_embeddings.py  rms_norm.py  rotary_positional_embeddings.py  scaled_attention.py  sparse_moe_block.py  sparse_moe_transformer.py  toy_training.py  trainer.py  transformer.py  transformer_blk.py  utils.py
tests/: conftest.py  test_GQA.py  test_multiheadattention.py  test_rope_attention.py  test_transformer_blocks.py
