[project]
name = "my_mac_pytorch_project"
version = "0.1.0"
description = "A project using PyTorch with Apple MPS and uv"
authors = [
    { name = "Rui Sa Pereira", email = "you@example.com" }
]
requires-python = ">=3.10" 
license = { text = "MIT" }

# ----------------------------------------------------------------------
# Core Dependencies (MOVED to the [project] table)
# ----------------------------------------------------------------------
dependencies = [
    # PyTorch Core Packages (Strictly Pinned for Reproducibility)
    "torch==2.9.0",
    "torchvision==0.24.0",
    "torchaudio==2.9.0",
    # NumPy Pin (Crucial for C-API compatibility with PyTorch)
    "numpy>=1.26.0,<2.0.0",
    "tqdm",
    "jupyter>=1.1.1",
    "ipykernel>=7.1.0",
]

# ----------------------------------------------------------------------
# Optional Dependencies (REMAINS in [project.optional-dependencies])
# ----------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=24.0",
    "ruff>=0.5.0",
]
